packages/ui/src/styles/styles.css
/* ... */
.diff-tailwindcss-wrapper .translate-x-\[50\%\] {
  --cn-tw-translate-x: 50%;
}
.diff-tailwindcss-wrapper .translate-y-\[-50\%\] {
  --cn-tw-translate-y: -50%;
  transform: translate(var(--cn-tw-translate-x, 0), var(--cn-tw-translate-y, 0)) rotate(var(--cn-tw-rotate, 0))
    skewX(var(--cn-tw-skew-x, 0)) skewY(var(--cn-tw-skew-y, 0)) scaleX(var(--cn-tw-scale-x, 1))
    scaleY(var(--cn-tw-scale-y, 1));
}
.diff-tailwindcss-wrapper .cursor-pointer {
  cursor: pointer;
}
.diff-tailwindcss-wrapper .select-none {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
.diff-tailwindcss-wrapper .flex-col {
  flex-direction: column;
}
.diff-tailwindcss-wrapper .items-start {
  align-items: flex-start;
}
.diff-tailwindcss-wrapper .items-center {
  align-items: center;
}
.diff-tailwindcss-wrapper .justify-center {
  justify-content: center;
}
.diff-tailwindcss-wrapper .overflow-x-auto {
  overflow-x: auto;
}
.diff-tailwindcss-wrapper .overflow-y-hidden {
  overflow-y: hidden;
}
.diff-tailwindcss-wrapper .whitespace-nowrap {
  white-space: nowrap;
}
.diff-tailwindcss-wrapper .break-all {
  word-break: break-all;
}
.diff-tailwindcss-wrapper .bg-\[rgb\(222\2c 222\2c 222\)\] {
  --cn-tw-bg-opacity: 1;
  background-color: rgb(222 222 222 / var(--cn-tw-bg-opacity));
}
.diff-tailwindcss-wrapper .fill-current {
  fill: currentColor;
}
.diff-tailwindcss-wrapper .p-0 {
  padding: 0;
}
.diff-tailwindcss-wrapper .p-\[1px\] {
  padding: 1px;
}
.diff-tailwindcss-wrapper .px-\[10px\] {
  padding-left: 10px;
  padding-right: 10px;
}
.diff-tailwindcss-wrapper .py-\[2px\] {
  padding-bottom: 2px;
  padding-top: 2px;
}
.diff-tailwindcss-wrapper .py-\[6px\] {
  padding-bottom: 6px;
  padding-top: 6px;
}
.diff-tailwindcss-wrapper .pl-\[1\.5em\] {
  padding-left: 1.5em;
}
.diff-tailwindcss-wrapper .pl-\[10px\] {
  padding-left: 10px;
}
.diff-tailwindcss-wrapper .pl-\[2\.0em\] {
  padding-left: 2em;
}
.diff-tailwindcss-wrapper .pr-\[10px\] {
  padding-right: 10px;
}
.diff-tailwindcss-wrapper .text-right {
  text-align: right;
}
.diff-tailwindcss-wrapper .indent-\[0\.2em\] {
  text-indent: 0.2em;
}
.diff-tailwindcss-wrapper .align-top {
  vertical-align: top;
}
.diff-tailwindcss-wrapper .align-middle {
  vertical-align: middle;
}
.diff-tailwindcss-wrapper .text-\[1\.2em\] {
  font-size: 1.2em;
}
.diff-tailwindcss-wrapper .leading-\[1\.4\] {
  line-height: 1.4;
}
.diff-tailwindcss-wrapper .leading-\[1\.6\] {
  line-height: 1.6;
}
.diff-tailwindcss-wrapper .text-red-500 {
  --cn-tw-text-opacity: 1;
  color: rgb(239 68 68 / var(--cn-tw-text-opacity));
}
.diff-tailwindcss-wrapper .opacity-\[0\.5\] {
  opacity: 0.5;
}
.diff-tailwindcss-wrapper .filter {
  filter: var(--cn-tw-blur) var(--cn-tw-brightness) var(--cn-tw-contrast) var(--cn-tw-grayscale) var(--cn-tw-hue-rotate)
    var(--cn-tw-invert) var(--cn-tw-saturate) var(--cn-tw-sepia) var(--cn-tw-drop-shadow);
}
.diff-tailwindcss-wrapper .transition-transform {
  transition-duration: 0.15s;
  transition-property: transform;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.diff-tailwindcss-wrapper .scrollbar-hide {
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.diff-tailwindcss-wrapper .scrollbar-hide::-webkit-scrollbar {
  display: none;
}

.diff-tailwindcss-wrapper .scrollbar-disable::-webkit-scrollbar {
  display: none;
}
.diff-tailwindcss-wrapper .scrollbar-disable {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.sub-menu-icon-bg {
  stop {
    stop-color: var(--cn-text-2);

    & + stop {
      stop-color: var(--cn-text-3);
    }
  }
}

:where(:focus-visible) {
  outline: none;
}

mark {
  background: var(--cn-set-brand-solid-bg);
  color: var(--cn-set-brand-solid-text);
}

/* Hack for detecting scroll on select */
@keyframes detect-scroll {
  from,
  to {
    --can-scroll: ;
  }
}

[data-radix-select-viewport] {
  animation: detect-scroll linear;
  animation-timeline: scroll(self);

  --padding-if-can-scroll: var(--can-scroll) 4px 0 4px 4px;
  --padding-if-cant-scroll: 4px;
  padding: var(--padding-if-can-scroll, var(--padding-if-cant-scroll));
}

/* Select scrollbar */

[data-radix-select-viewport] {
  scrollbar-width: auto !important;
}

[data-radix-select-viewport]::-webkit-scrollbar {
  width: 14px;
  display: block !important;
}

[data-radix-select-viewport]::-webkit-scrollbar-thumb {
  background-color: var(--cn-comp-scrollbar-thumb);
  border: 4px solid transparent;
  border-radius: 7px;
  background-clip: content-box;
}

.breadcrumbs {
  @apply bg-cn-background-1 fixed top-0 z-30 ml-56 w-full;
}

.layer-high {
  @apply z-[19];
}
.layer-medium {
  @apply z-[15];
}
.layer-low {
  @apply z-10;
}

/*  MONACO EDITOR  */
.monaco-editor.monaco-editor {
  --vscode-editorGutter-background: transparent;
  --vscode-editor-background: transparent;
  --vscode-editorLineNumber-foreground: var(--cn-text-3);
  --vscode-editorLineNumber-activeForeground: var(--cn-text-1);
  outline-color: transparent !important;
}

.monaco-editor .overflow-guard {
  @apply border-cn-borders-3 rounded-b-3 border border-t-0;
}

.monaco-diff-editor .monaco-editor .overflow-guard {
  @apply border-0;
}

.monaco-diff-editor .diffOverview .diffViewport {
  background: var(--cn-comp-scrollbar-thumb, lch(20.5% 2.62 285.74));

  &:hover {
    background: var(--cn-comp-scrollbar-thumb, lch(20.5% 2.62 285.74));
  }
}

.monaco-scrollable-element > .scrollbar > .slider {
  border-radius: var(--cn-rounded-full, 0.25rem);
  --vscode-scrollbarSlider-background: var(--cn-comp-scrollbar-thumb, lch(20.5% 2.62 285.74));
}

.monaco-diff-editor.side-by-side .editor.modified {
  @apply !border-cn-borders-2 !border-l !border-solid !shadow-none;
}

/* In View Diff Renderer */
.diffViewBlock {
  @apply visible box-border flex h-auto min-h-[48px] flex-col;
}

/* .hidden extension */
.diffViewBlock.hiddenDiff {
  @apply invisible h-[var(--block-height)] [contain-intrinsic-height:auto_var(--block-height)] [content-visibility:auto];
}
/* ... */

